# FinStove

./: .gitignore  CLAUDE.md  README.md  dashboard_demo.py  pyproject.toml
.claude/skills/: analyze-stock.md  fetch-all.md  fetch-commodity.md  fetch-crypto.md  fetch-flow.md  fetch-forex.md  fetch-index.md  fetch-stock.md  fetch-us-index.md  fetch-yield-curve.md  financials.md  intraday.md  label-data.md  macro-check.md  market-scan.md  report-analyze.md  reports.md  review.md  risk-check.md  spot.md
.claude/skills/analyze-stock/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/correlation-check/: SKILL.md
.claude/skills/dividend-yield/: SKILL.md
.claude/skills/fetch-all/: SKILL.md
config/: providers.yaml  scoring.yaml  settings.yaml  watchlist.txt
docs/: architecture.md  capabilities.md  data-flow.md  data-structure.md
src/analysis/: base.py  benchmark.py  capital_flow.py  correlation.py  dividend_yield.py  macro.py  policy.py  report_text.py  risk.py  scenario.py  sentiment.py  technical.py
src/cli/: colors.py  main.py
src/data/: base.py  cache.py  gateway.py  macro_data.py  models.py  normalizer.py  rate_limiter.py  registry.py  storage.py  validator.py
src/integration/: aggregator.py  report.py  scorer.py
src/track/: __init__.py  models.py  record.py  review.py  stats.py
src/utils/: config.py  ticker.py
tests/analysis/: test_benchmark.py  test_dividend_yield.py  test_risk.py  test_scenario.py
tests/cli/: test_commands.py
tests/data/: test_normalizer.py  test_validator.py
tests/utils/: test_ticker.py
(+84 files in other folders)
