[project]
name = "stocks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.15.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.0",
    "ta>=0.11.0",
    "typer>=0.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "diskcache>=5.6.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
]

[project.scripts]
fstove = "src.cli.main:cli"

[project.optional-dependencies]
fred = ["fredapi>=0.5.0"]
crypto = ["pycoingecko>=3.1.0"]
nlp = ["jieba>=0.42.1", "nltk>=3.8.0", "feedparser>=6.0.0"]
web = ["streamlit>=1.32.0", "plotly>=5.19.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.3.0", "mypy>=1.9.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
